Bug 1516509 - add undisclosed-recipients when queueing message. r=aceman DONTBUILD